<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <com.linkingwin.elearn.common.widget.TitleView
        android:id="@+id/forget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginBottom="@dimen/btMarginSmall"
        android:layout_marginTop="@dimen/btMarginSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_pic"/>

    <com.linkingwin.elearn.common.widget.SuperEditText
        android:id="@+id/forget_num"
        android:layout_width="@dimen/inputwidth"
        android:layout_height="wrap_content"
        customView:leftIconClick="@drawable/user_select"
        customView:leftIconUnClick="@drawable/user_unselect"
        customView:IconDelete="@drawable/del_but_bg"
        customView:left_width="@integer/lefticon"
        customView:left_height="@integer/lefticon"
        customView:delete_width="@integer/deleteicon"
        customView:delete_height="@integer/deleteicon"

        android:hint="@string/et_hintNum"
        android:textColorHint="@color/hintEditText"
        android:textSize="@dimen/editTextSize"
        android:inputType="phone"
        android:maxLength="11"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <com.linkingwin.elearn.common.widget.SuperEditText
            android:id="@+id/forget_verNum"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textListMargin"
            customView:leftIconClick="@drawable/vernum_click"
            customView:leftIconUnClick="@drawable/vernum_unclick"
            customView:IconDelete="@drawable/del_but_bg"
            customView:left_width="@integer/lefticon"
            customView:left_height="@integer/lefticon"
            customView:delete_width="@integer/deleteicon"
            customView:delete_height="@integer/deleteicon"

            android:hint="@string/hint_verNum"
            android:textColorHint="@color/hintEditText"
            android:textSize="@dimen/editTextSize"
            android:inputType="number"
            android:maxLength="6"
            />
        <Button
            android:id="@+id/forget_getVerNum"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/textListMargin"
            android:layout_toEndOf="@+id/forget_verNum"
            android:text="获取验证码"
            android:textSize="@dimen/btTextSize"
            android:textColor="@color/blue"
            android:background="@drawable/btn_blue_nosolid"
            />
    </RelativeLayout>

    <com.linkingwin.elearn.common.widget.SuperEditText
        android:id="@+id/forget_newPWD"
        android:layout_width="@dimen/inputwidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textListMargin"
        customView:leftIconClick="@drawable/password_click"
        customView:leftIconUnClick="@drawable/password_unclick"
        customView:IconDelete="@drawable/del_but_bg"
        customView:left_width="@integer/lefticon"
        customView:left_height="@integer/lefticon"
        customView:delete_width="@integer/deleteicon"
        customView:delete_height="@integer/deleteicon"

        android:hint="@string/hint_PWD"
        android:textColorHint="@color/hintEditText"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:maxLength="20"
        />
    <com.linkingwin.elearn.common.widget.SuperEditText
        android:id="@+id/forget_againPWD"
        android:layout_width="@dimen/inputwidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textListMargin"
        customView:leftIconClick="@drawable/password_click"
        customView:leftIconUnClick="@drawable/password_unclick"
        customView:IconDelete="@drawable/del_but_bg"
        customView:left_width="@integer/lefticon"
        customView:left_height="@integer/lefticon"
        customView:delete_width="@integer/deleteicon"
        customView:delete_height="@integer/deleteicon"

        android:hint="@string/hint_againPWD"
        android:textColorHint="@color/hintEditText"
        android:textSize="@dimen/editTextSize"
        android:inputType="textPassword"
        android:maxLength="20"
        />
    <TextView
        android:id="@+id/forget_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/warnRed"
        android:textSize="12sp"
        />
    <Button
        android:id="@+id/forget_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btMarginSmall"
        android:layout_marginRight="@dimen/btMargin50dp"
        android:layout_marginLeft="@dimen/btMargin50dp"
        android:text="@string/submit"
        android:textColor="@color/titleWhite"
        android:background="@drawable/btn_blue_gradual"
        />
</LinearLayout>