<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/register_banner"
        android:contentDescription="@string/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bannerHeight"
        android:background="@color/colorAccent"
        android:visibility="gone"
        />
    <com.linkingwin.elearn.common.widget.TitleView
        android:id="@+id/title_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_marginBottom="@dimen/btMarginSmall"
        android:layout_marginTop="@dimen/btMarginSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_pic"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/register_banner"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <com.linkingwin.elearn.common.widget.SuperEditText
            android:id="@+id/et_register_num"
            android:layout_width="@dimen/inputwidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            customView:leftIconClick="@drawable/user_select"
            customView:leftIconUnClick="@drawable/user_unselect"
            customView:IconDelete="@drawable/del_but_bg"
            customView:left_width="@integer/lefticon"
            customView:left_height="@integer/lefticon"
            customView:delete_width="@integer/deleteicon"
            customView:delete_height="@integer/deleteicon"

            android:hint="@string/et_hintNum"
            android:textColorHint="@color/hintEditText"
            android:textSize="@dimen/editTextSize"
            android:inputType="phone"
            android:maxLength="11"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <com.linkingwin.elearn.common.widget.SuperEditText
                android:id="@+id/et_register_verNUM"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textListMargin"
                customView:leftIconClick="@drawable/vernum_click"
                customView:leftIconUnClick="@drawable/vernum_unclick"
                customView:IconDelete="@drawable/del_but_bg"
                customView:left_width="@integer/lefticon"
                customView:left_height="@integer/lefticon"
                customView:delete_width="@integer/deleteicon"
                customView:delete_height="@integer/deleteicon"

                android:hint="@string/hint_verNum"
                android:textColorHint="@color/hintEditText"
                android:textSize="@dimen/editTextSize"
                android:inputType="number"
                android:maxLength="6"
                />
            <Button
                android:id="@+id/bt_getVerNUM"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/textListMargin"
                android:layout_toEndOf="@+id/et_register_verNUM"
                android:text="获取验证码"
                android:textSize="@dimen/btTextSize"
                android:textColor="@color/blue"
                android:background="@drawable/btn_blue_nosolid"
                />
        </RelativeLayout>

        <com.linkingwin.elearn.common.widget.SuperEditText
            android:id="@+id/et_register_PWD"
            android:layout_width="@dimen/inputwidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textListMargin"
            android:hint="@string/hint_PWD"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColorHint="@color/hintEditText"
            android:textSize="12sp"
            customView:IconDelete="@drawable/del_but_bg"
            customView:delete_height="@integer/deleteicon"

            customView:delete_width="@integer/deleteicon"
            customView:leftIconClick="@drawable/password_click"
            customView:leftIconUnClick="@drawable/password_unclick"
            customView:left_height="@integer/lefticon"
            customView:left_width="@integer/lefticon" />
        <com.linkingwin.elearn.common.widget.SuperEditText
            android:id="@+id/et_register_againPWD"
            android:layout_width="@dimen/inputwidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textListMargin"
            customView:leftIconClick="@drawable/password_click"
            customView:leftIconUnClick="@drawable/password_unclick"
            customView:IconDelete="@drawable/del_but_bg"
            customView:left_width="@integer/lefticon"
            customView:left_height="@integer/lefticon"
            customView:delete_width="@integer/deleteicon"
            customView:delete_height="@integer/deleteicon"

            android:hint="@string/hint_againPWD"
            android:textColorHint="@color/hintEditText"
            android:textSize="@dimen/editTextSize"
            android:inputType="textPassword"
            android:maxLength="20"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_read_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册前请仔细阅读平台协议"
                android:textColor="@color/blue"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_TipNum_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/warnRed"
            android:textSize="@dimen/sp12"
            />
        <Button
            android:id="@+id/bt_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btMarginSmall"
            android:layout_marginTop="@dimen/btMarginSmall"
            android:layout_marginRight="@dimen/btMarginBig"
            android:layout_marginLeft="@dimen/btMarginBig"
            android:text="@string/bt_register"
            android:textColor="@color/titleWhite"
            android:background="@drawable/btn_blue_gradual"
            />
    </LinearLayout>
</LinearLayout>